src/objects/ERP_Product__c.object
<CustomObject>
    <description>Store the information related to the Sales Area for a product</description>
    <fields>
        <fullName>Product_Distribution_Channel__c</fullName>
        <description>Distribution Channel for the product</description>
        <inlineHelpText>Distribution Channel for the product</inlineHelpText>
        <label>Product Distribution Channel</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Division__c</fullName>
        <description>Division of the Product</description>
        <inlineHelpText>Division of the Product</inlineHelpText>
        <label>Product Division</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sales_Org__c</fullName>
        <description>Sales Organisation of the product</description>
        <inlineHelpText>Sales Organisation of the product</inlineHelpText>
        <label>Product Sales Org.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>ERP Product</label>
    <nameField>
        <displayFormat>ERP-{000000}</displayFormat>
        <label>ERP Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>